group credscan and policheck

--- a/azure-pipelines/experiment/msal-code-coverage-experiment.yml
+++ b/azure-pipelines/experiment/msal-code-coverage-experiment.yml
@@ -12,11 +12,6 @@
 # Variable 'testEmailAccount' was defined in the Variables tab
 # Variable 'testEmailAccountPassword' was defined in the Variables tab
 # Variable 'toEmailAccount' was defined in the Variables tab
-variables:
-- name: BuildParameters.cmdLineArgs
-  value: /F:$(Build.SourcesDirectory)+"\adal\src\" /T:9 /O:\"PoliCheck.xml\"
-- name: BuildParameters.inputType
-  value: Basic
 name: $(date:yyyyMMdd)$(rev:.r)
 resources:
   repositories:
@@ -40,27 +35,9 @@ jobs:
     inputs:
       secureFile: ef6e868b-e669-488e-ba56-842088c3e7da
       retryCount: 5
-  - task: CredScan@2
-    name: CredScan_1
-    displayName: Run CredScan
-    inputs:
-      toolVersionV2: LatestPreRelease
-      debugMode: false
-      folderSuppression: false
-  - task: PoliCheck@1
-    name: PoliCheck_2
-    displayName: Run PoliCheck
-    inputs:
-      inputType: $(BuildParameters.inputType)
-      cmdLineArgs: $(BuildParameters.cmdLineArgs)
-      importEx: 0
-      optionsFC: 1
-      optionsXS: 1
-      optionsSEV: 1|2
-      optionsPE: 1|2|3|4
-  - task: PublishSecurityAnalysisLogs@2
-    name: PublishSecurityAnalysisLogs15
-    displayName: Publish Security Analysis Logs
+  - template: ../templates/steps/credscan-policheck.yml
+    parameters:
+      policheck-cmdlineargs-dir: adal
   - task: CmdLine@1
     displayName: Set MVN Access Token in Environment
     inputs:
