--- a/azure-pipelines/nightly-snapshot-releases/nightly-msal-vsts-release-clone.yml
+++ b/azure-pipelines/nightly-snapshot-releases/nightly-msal-vsts-release-clone.yml
@@ -7,11 +7,6 @@
 # Variable 'test_repo_dir' was defined in the Variables tab
 # Variable Group 'Android Common Variables' was defined in the Variables tab
 # Cron Schedules have been converted using UTC Time Zone and may need to be updated for your location
-variables:
-- name: BuildParameters.cmdLineArgs
-  value: /F:$(Build.SourcesDirectory)+"\adal\src\" /T:9 /O:\"PoliCheck.xml\"
-- name: BuildParameters.inputType
-  value: Basic
 schedules:
 - cron: 0 23 * * *
   branches:
@@ -35,26 +30,9 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
-  - task: CredScan@2
-    name: CredScan_1
-    displayName: Run CredScan
-    inputs:
-      debugMode: false
-      folderSuppression: false
-  - task: PoliCheck@1
-    name: PoliCheck_2
-    displayName: Run PoliCheck
-    inputs:
-      inputType: $(BuildParameters.inputType)
-      cmdLineArgs: $(BuildParameters.cmdLineArgs)
-      importEx: 0
-      optionsFC: 1
-      optionsXS: 1
-      optionsSEV: 1|2
-      optionsPE: 1|2|3|4
-  - task: PublishSecurityAnalysisLogs@2
-    name: PublishSecurityAnalysisLogs15
-    displayName: Publish Security Analysis Logs
+  - template: ../templates/steps/credscan-policheck.yml
+    parameters:
+      policheck-cmdlineargs-dir: adal
   - task: TSAUpload@1
     displayName: TSA Upload
     enabled: False
