--- a/azure-pipelines/ui-automations/msal-perf-test-(broker-host).yml
+++ b/azure-pipelines/ui-automations/msal-perf-test-(broker-host).yml
@@ -11,11 +11,6 @@
 # Variable 'testAPI' was defined in the Variables tab
 # Variable 'testDevice' was defined in the Variables tab
 # Cron Schedules have been converted using UTC Time Zone and may need to be updated for your location
-variables:
-- name: BuildParameters.cmdLineArgs
-  value: /F:$(Build.SourcesDirectory)+"\adal\src\" /T:9 /O:\"PoliCheck.xml\"
-- name: BuildParameters.inputType
-  value: Basic
 schedules:
 - cron: 0 5 * * 1,2,3,4,5
   branches:
@@ -129,27 +124,9 @@ jobs:
     inputs:
       pathToZipFile: $(perfBase.secureFilePath)
       pathToZipFolder: $(Build.SourcesDirectory)\basefiles
-  - task: CredScan@2
-    name: CredScan_1
-    displayName: Run CredScan
-    inputs:
-      toolVersionV2: LatestPreRelease
-      debugMode: false
-      folderSuppression: false
-  - task: PoliCheck@1
-    name: PoliCheck_2
-    displayName: Run PoliCheck
-    inputs:
-      inputType: $(BuildParameters.inputType)
-      cmdLineArgs: $(BuildParameters.cmdLineArgs)
-      importEx: 0
-      optionsFC: 1
-      optionsXS: 1
-      optionsSEV: 1|2
-      optionsPE: 1|2|3|4
-  - task: PublishSecurityAnalysisLogs@2
-    name: PublishSecurityAnalysisLogs15
-    displayName: Publish Security Analysis Logs
+  - template: ../templates/steps/credscan-policheck.yml
+    parameters:
+      policheck-cmdlineargs-dir: adal
   - task: CmdLine@1
     displayName: Set MVN Access Token in Environment
     inputs:
