--- a/azure-pipelines/vsts-releases/msal-vsts-release.yml
+++ b/azure-pipelines/vsts-releases/msal-vsts-release.yml
@@ -6,11 +6,6 @@
 # Variable 'mvnAccessToken' was defined in the Variables tab
 # Variable 'test_repo_branch' was defined in the Variables tab
 # Variable 'test_repo_dir' was defined in the Variables tab
-variables:
-- name: BuildParameters.cmdLineArgs
-  value: /F:$(Build.SourcesDirectory)+"\adal\src\" /T:9 /O:\"PoliCheck.xml\"
-- name: BuildParameters.inputType
-  value: Basic
 name: $(date:yyyyMMdd)$(rev:.r)
 resources:
   repositories:
@@ -33,26 +28,9 @@ jobs:
     inputs:
       filename: echo
       arguments: '##vso[task.setvariable variable=ENV_VSTS_MVN_ANDROID_MSAL_ACCESSTOKEN]$(mvnAccessToken)'
-  - task: CredScan@2
-    name: CredScan_1
-    displayName: Run CredScan
-    inputs:
-      debugMode: false
-      folderSuppression: false
-  - task: PoliCheck@1
-    name: PoliCheck_2
-    displayName: Run PoliCheck
-    inputs:
-      inputType: $(BuildParameters.inputType)
-      cmdLineArgs: $(BuildParameters.cmdLineArgs)
-      importEx: 0
-      optionsFC: 1
-      optionsXS: 1
-      optionsSEV: 1|2
-      optionsPE: 1|2|3|4
-  - task: PublishSecurityAnalysisLogs@2
-    name: PublishSecurityAnalysisLogs15
-    displayName: Publish Security Analysis Logs
+  - template: ../templates/steps/credscan-policheck.yml
+    parameters:
+      policheck-cmdlineargs-dir: adal
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble Release
