fix parameters in templates
remove dots in params

change params in automation cert

update automation cert

fix parameters in templates

--- a/azure-pipelines/experiment/msal-code-coverage-experiment.yml
+++ b/azure-pipelines/experiment/msal-code-coverage-experiment.yml
@@ -37,7 +37,7 @@ jobs:
       retryCount: 5
   - template: ../templates/steps/credscan-policheck.yml
     parameters:
-      policheck-cmdlineargs-dir: adal
+      policheckCmdLineArgsDir: adal
   - template: ../templates/steps/automation-cert.yml
   - task: Gradle@1
     name: Gradle1
