--- a/azure-pipelines/experiment/msal-email-experiment.yml
+++ b/azure-pipelines/experiment/msal-email-experiment.yml
@@ -53,7 +53,7 @@ jobs:
         $(sendEmail.secureFilePath) $(idlabEmailAccount) $(idlabEmailAccountPassword) $(toEmailAccount)
   - template: ../templates/steps/credscan-policheck.yml
     parameters:
-      policheck-cmdlineargs-dir: adal
+      policheckCmdLineArgsDir: adal
   - template: ../templates/steps/automation-cert.yml
   - task: Gradle@1
     name: Gradle1
