--- a/azure-pipelines/maven-releases/msal-maven-release.yml
+++ b/azure-pipelines/maven-releases/msal-maven-release.yml
@@ -24,7 +24,7 @@ jobs:
     persistCredentials: True
   - template: ../templates/steps/credscan-policheck.yml
     parameters:
-      policheck-cmdlineargs-dir: common
+      policheckCmdLineArgsDir: common
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble Dist Release
