--- a/azure-pipelines/pull-request-validation/msal-pr-validation.yml
+++ b/azure-pipelines/pull-request-validation/msal-pr-validation.yml
@@ -38,7 +38,7 @@ jobs:
     persistCredentials: True
   - template: ../templates/steps/credscan-policheck.yml
     parameters:
-      policheck-cmdlineargs-dir: adal
+      policheckCmdLineArgsDir: adal
   - template: ../templates/steps/automation-cert.yml
   - task: JavaToolInstaller@0
     displayName: Use Java 8
