--- a/azure-pipelines/ui-automations/assemble-msal-automation-app-(broker-host-flavor).yml
+++ b/azure-pipelines/ui-automations/assemble-msal-automation-app-(broker-host-flavor).yml
@@ -26,7 +26,7 @@ jobs:
     persistCredentials: True
   - template: ../templates/steps/credscan-policheck.yml
     parameters:
-      policheck-cmdlineargs-dir: adal
+      policheckCmdLineArgsDir: adal
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble MSAL Automation App
