--- a/azure-pipelines/vsts-releases/msal-vsts-release.yml
+++ b/azure-pipelines/vsts-releases/msal-vsts-release.yml
@@ -30,7 +30,7 @@ jobs:
       arguments: '##vso[task.setvariable variable=ENV_VSTS_MVN_ANDROID_MSAL_ACCESSTOKEN]$(mvnAccessToken)'
   - template: ../templates/steps/credscan-policheck.yml
     parameters:
-      policheck-cmdlineargs-dir: adal
+      policheckCmdLineArgsDir: adal
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble Release
