--- a/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
+++ b/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
@@ -32,7 +32,7 @@ jobs:
     persistCredentials: True
   - template: ../templates/steps/credscan-policheck.yml
     parameters:
-      policheck-cmdlineargs-dir: adal
+      policheckCmdLineArgsDir: adal
   - task: CmdLine@1
     displayName: Set MVN Access Token in Environment
     inputs:
