move templates to common

--- a/azure-pipelines/nightly-snapshot-releases/nightly-msal-vsts-release.yml
+++ b/azure-pipelines/nightly-snapshot-releases/nightly-msal-vsts-release.yml
@@ -19,6 +19,11 @@ resources:
   - repository: self
     type: git
     ref: dev
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -30,7 +35,7 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
   - task: TSAUpload@1
@@ -53,7 +58,7 @@ jobs:
       uploadPREfast: false
       uploadRoslyn: false
       uploadTSLint: false
-  - template: ../templates/steps/automation-cert.yml
+  - template: azure-pipelines/templates/steps/automation-cert.yml@common
     parameters:
       envVstsMvnAt: ENV_VSTS_MVN_ANDROID_MSAL_ACCESSTOKEN
   - task: Gradle@2
