--- a/azure-pipelines/testapps/msal-test-app.yml
+++ b/azure-pipelines/testapps/msal-test-app.yml
@@ -21,6 +21,11 @@ resources:
   - repository: self
     type: git
     ref: dev
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -32,7 +37,7 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
   - task: PowerShell@2
@@ -67,7 +72,7 @@ jobs:
 
 
         Write-Host "##vso[task.setvariable variable=AssembleTask;]$assembleTask"
-  - template: ../templates/steps/automation-cert.yml
+  - template: azure-pipelines/templates/steps/automation-cert.yml@common
     parameters:
       envVstsMvnAt: ENV_VSTS_MVN_ANDROID_MSAL_USERNAME
   - task: Gradle@1
