--- a/azure-pipelines/ui-automations/msal-broker-ui-automation-against-authenticator-(prod).yml
+++ b/azure-pipelines/ui-automations/msal-broker-ui-automation-against-authenticator-(prod).yml
@@ -14,6 +14,11 @@ resources:
   - repository: self
     type: git
     ref: shahzaibj/pinFixTest
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -25,7 +30,7 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
   - task: CmdLine@1
