--- a/azure-pipelines/experiment/msal-code-coverage-experiment-clone.yml
+++ b/azure-pipelines/experiment/msal-code-coverage-experiment-clone.yml
@@ -15,6 +15,11 @@ resources:
   - repository: self
     type: git
     ref: aymeghwa-CodeCoverage
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -26,10 +31,10 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
-  - template: ../templates/steps/automation-cert.yml
+  - template: azure-pipelines/templates/steps/automation-cert.yml@common
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble Release
