--- a/azure-pipelines/experiment/msal-code-coverage-experiment.yml
+++ b/azure-pipelines/experiment/msal-code-coverage-experiment.yml
@@ -18,6 +18,11 @@ resources:
   - repository: self
     type: git
     ref: aymeghwa-CodeCoverage
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -35,10 +40,10 @@ jobs:
     inputs:
       secureFile: ef6e868b-e669-488e-ba56-842088c3e7da
       retryCount: 5
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
-  - template: ../templates/steps/automation-cert.yml
+  - template: azure-pipelines/templates/steps/automation-cert.yml@common
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble Release
