--- a/azure-pipelines/experiment/msal-email-experiment.yml
+++ b/azure-pipelines/experiment/msal-email-experiment.yml
@@ -18,6 +18,11 @@ resources:
   - repository: self
     type: git
     ref: dev
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -51,10 +56,10 @@ jobs:
 
 
         $(sendEmail.secureFilePath) $(idlabEmailAccount) $(idlabEmailAccountPassword) $(toEmailAccount)
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
-  - template: ../templates/steps/automation-cert.yml
+  - template: azure-pipelines/templates/steps/automation-cert.yml@common
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble Release
