--- a/azure-pipelines/maven-releases/msal-maven-release.yml
+++ b/azure-pipelines/maven-releases/msal-maven-release.yml
@@ -11,6 +11,11 @@ resources:
   - repository: self
     type: git
     ref: master
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: SDL and Maven Tasks
@@ -22,7 +27,7 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: common
   - task: Gradle@1
