--- a/azure-pipelines/pull-request-validation/msal-pr-validation.yml
+++ b/azure-pipelines/pull-request-validation/msal-pr-validation.yml
@@ -44,8 +44,8 @@ jobs:
   - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
-  - template: ../templates/steps/automation-cert.yml
-  - task: JavaToolInstaller@0
+  - template: azure-pipelines/templates/steps/automation-cert.yml@common
+                     - task: JavaToolInstaller@0
     displayName: Use Java 8
     inputs:
       jdkArchitectureOption: x64
