--- a/azure-pipelines/server-slice-validations/msal-slice-validation.yml
+++ b/azure-pipelines/server-slice-validations/msal-slice-validation.yml
@@ -17,6 +17,11 @@ resources:
   - repository: self
     type: git
     ref: master-test
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -28,10 +33,10 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
-  - template: ../templates/steps/automation-cert.yml
+  - template: azure-pipelines/templates/steps/automation-cert.yml@common
   - task: Gradle@1
     name: Gradle1
     displayName: Assemble Release
