--- a/azure-pipelines/ui-automations/msal-perf-test-(broker-host).yml
+++ b/azure-pipelines/ui-automations/msal-perf-test-(broker-host).yml
@@ -22,6 +22,11 @@ resources:
   - repository: self
     type: git
     ref: neagarw/perfAcquireTokenTest
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -124,7 +129,7 @@ jobs:
     inputs:
       pathToZipFile: $(perfBase.secureFilePath)
       pathToZipFolder: $(Build.SourcesDirectory)\basefiles
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
   - task: CmdLine@1
