--- a/azure-pipelines/vsts-releases/msal-vsts-release.yml
+++ b/azure-pipelines/vsts-releases/msal-vsts-release.yml
@@ -12,6 +12,11 @@ resources:
   - repository: self
     type: git
     ref: master
+  - repository: common
+    type: github
+    name: AzureAD/microsoft-authentication-library-common-for-android
+    ref: refs/heads/pedroro/IDDP-pipelines
+    endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
   displayName: Phase 1
@@ -28,7 +33,7 @@ jobs:
     inputs:
       filename: echo
       arguments: '##vso[task.setvariable variable=ENV_VSTS_MVN_ANDROID_MSAL_ACCESSTOKEN]$(mvnAccessToken)'
-  - template: ../templates/steps/credscan-policheck.yml
+  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
   - task: Gradle@1
