--- a/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
+++ b/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
@@ -50,7 +50,7 @@ jobs:
       ConnectedServiceName: 52f0b8f0-fbe7-4c1b-8169-25886eb6bab4
       KeyVaultName: ADALTestInfo
       SecretsFilter: AndroidAutomationRunnerAppSecret
-  - task: DownloadBuildArtifacts@0
+  - task: DownloadPipelineArtifact@2
     displayName: Download Broker Host APK
     inputs:
       buildType: specific
@@ -66,7 +66,7 @@ jobs:
     inputs:
       secureFile: 960465ec-c668-4926-a723-32c6c952d643
       retryCount: 5
-  - task: DownloadBuildArtifacts@0
+  - task: DownloadPipelineArtifact@2
     displayName: Download Azure Sample Local Debug
     inputs:
       buildType: specific
