update path to run-instrumented-tests.sh

--- a/azure-pipelines/auth-client/azure-pipelines.yml
+++ b/azure-pipelines/auth-client/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
     echo =============================================
     echo Run unit and instrumented inside docker container
     echo =============================================
-    docker run --privileged --cpus="3" --memory="12g" -v "$PWD":/home/gradle/ -w /home/gradle/ authclient.azurecr.io/samples/dbi-instrumented-api30 sh scripts/run-instrumented-tests.sh
+    docker run --privileged --cpus="3" --memory="12g" -v "$PWD":/home/gradle/ -w /home/gradle/ authclient.azurecr.io/samples/dbi-instrumented-api30 sh ../../scripts/run-instrumented-tests.sh
   displayName: 'Build and test inside docker container'
 - script: |
     echo =============================================
