replace ref for common repository

--- a/azure-pipelines/experiment/msal-code-coverage-experiment-clone.yml
+++ b/azure-pipelines/experiment/msal-code-coverage-experiment-clone.yml
@@ -18,7 +18,7 @@ resources:
   - repository: common
     type: github
     name: AzureAD/microsoft-authentication-library-common-for-android
-    ref: refs/heads/pedroro/IDDP-pipelines
+    ref: dev
     endpoint: ANDROID_GITHUB
 jobs:
 - job: Phase_1
