--- a/azure-pipelines/pull-request-validation/msal-pr-validation.yml
+++ b/azure-pipelines/pull-request-validation/msal-pr-validation.yml
@@ -29,7 +29,7 @@ resources:
     type: github
     name: AzureAD/microsoft-authentication-library-common-for-android
     ref: pedroro/IDDP-pipelines
-    endpoint: ANDROID_GITHUB
+    endpoint: github.com_android_service_connection
 jobs:
 - job: Phase_1
   displayName: Phase 1
