replace object id of Azure Sample Debug APK

--- a/azure-pipelines/ui-automations/android-msal-firebase-code-coverage-experiment.yml
+++ b/azure-pipelines/ui-automations/android-msal-firebase-code-coverage-experiment.yml
@@ -45,7 +45,7 @@ jobs:
     name: azureSampleApk
     displayName: Download Azure Sample Debug APK
     inputs:
-      secureFile: 960465ec-c668-4926-a723-32c6c952d643
+      secureFile: AzureSampleDebug.apk
       retryCount: 5
   - template: azure-pipelines/templates/steps/ui-automation/gcloud.yml@common
   - task: Gradle@1
