--- a/azure-pipelines/ui-automations/experimental-msal-ui-automation.yml
+++ b/azure-pipelines/ui-automations/experimental-msal-ui-automation.yml
@@ -46,7 +46,7 @@ jobs:
     displayName: Download Azure Sample Debug APK
     enabled: False
     inputs:
-      secureFile: 960465ec-c668-4926-a723-32c6c952d643
+      secureFile: AzureSampleDebug.apk
       retryCount: 5
   - task: DownloadPipelineArtifact@2
     displayName: Download Azure Sample Local Debug
